--- a/Info-brochure.html
+++ b/Info-brochure.html
@@ -1,6 +1,49 @@
 <html>
 <header></Header>
+
 <body>
-<h1>Sumangalam</h1>
+    <center><img src="http://siddhagirisumangalam.org/public/images/frontend/sumangal.png">
+        <h1 style="color: #9c302d;">सुमंगलम - पंचमहाभूत लोकोत्सव</h1>
+    </center>
+    <br />
+    <br />
+    <h3 style="color: #9c302d;">Panchmahabhoot Lokotsav Brochures</h3>
+    <ul>
+        <li>
+            <a
+                href="http://siddhagirisumangalam.org/public/images/frontend/Panchamahabhot-Lokotsav-English-Brochure.pdf">Panchamahabhot
+                Lokotsav English Brochure</a>
+        </li>
+        <li>
+            <a
+                href="http://siddhagirisumangalam.org/public/images/frontend/Panchamahabhoot-Lokotsav-Hindi-Brochure.pdf">पंचमहाभूत
+                लोकोत्सव हिंदी ब्रोशर </a>
+        </li>
+        <li>
+            <a href="">पंचमहाभूत लोकोत्सव मराठी ब्रोशर</a>
+        </li>
+        <li>
+            <a
+                href="http://siddhagirisumangalam.org/public/images/frontend/Panchamahabhoot-Lokotsav-Kannada-Brochure.pdf">ಪಂಚಮಹಾಭೂತ
+                ಲೋಕೋತ್ಸವ - ಕನ್ನಡ ಕರಪತ್ರ</a>
+        </li>
+    </ul>
+    <h3 style="color: #9c302d;">Panchmahabhoot Lokotsav Videos</h3>
+    <ul>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2FY-NuUGh54" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qP-OtB-D2gA" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/GQs4Cmb9RgM" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+
+    </ul>
 </body>
+
 </html>
