--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <header></Header>
 
 <body>
-    <center><img src="http://siddhagirisumangalam.org/public/images/frontend/sumangal.png">
+    <center><img src="sumangal.png">
         <h1 style="color: #9c302d;">सुमंगलम - पंचमहाभूत लोकोत्सव</h1>
     </center>
     <br />
