--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <header></Header>
 
 <body>
-    <center><img src="sumangal.png">
+    <div style="vertical-align: middle; text-align: center;">
+        <img style="width: 190px;" src="SiddhagiriM-1.jpg">
+        <img style="margin-bottom: 30px;" src="http://siddhagirisumangalam.org/public/images/frontend/sumangal.png">
         <h1 style="color: #9c302d;">सुमंगलम - पंचमहाभूत लोकोत्सव</h1>
-    </center>
+    </div>
     <br />
     <br />
     <h3 style="color: #9c302d;">Panchmahabhoot Lokotsav Brochures</h3>
@@ -17,10 +19,10 @@
         <li>
             <a
                 href="http://siddhagirisumangalam.org/public/images/frontend/Panchamahabhoot-Lokotsav-Hindi-Brochure.pdf">पंचमहाभूत
-                लोकोत्सव हिंदी ब्रोशर </a>
+                लोकोत्सव हिंदी माहिती पत्रक </a>
         </li>
         <li>
-            <a href="">पंचमहाभूत लोकोत्सव मराठी ब्रोशर</a>
+            <a href="">पंचमहाभूत लोकोत्सव मराठी माहिती पत्रक</a>
         </li>
         <li>
             <a
