--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
     <div style="vertical-align: middle; text-align: center;">
         <img style="width: 190px;" src="SiddhagiriM-1.jpg">
-        <img style="margin-bottom: 30px;" src="http://siddhagirisumangalam.org/public/images/frontend/sumangal.png">
+        <img style="margin-bottom: 30px;" src="sumangal.png">
         <h1 style="color: #9c302d;">सुमंगलम - पंचमहाभूत लोकोत्सव</h1>
     </div>
     <br />
