--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-<header></Header>
+<header>
+    <title>सिद्धगिरी सुमंगलम - पंचमहाभूत लोकोत्सव</title>
+</Header>
 
 <body>
     <div style="vertical-align: middle; text-align: center;">
@@ -32,15 +34,15 @@
     </ul>
     <h3 style="color: #9c302d;">Panchmahabhoot Lokotsav Videos</h3>
     <ul>
-        <iframe width="336" height="189" src="https://www.youtube.com/embed/2FY-NuUGh54" title="YouTube video player"
+        <iframe width="448" height="252" src="https://www.youtube.com/embed/2FY-NuUGh54" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
-        <iframe width="336" height="189" src="https://www.youtube.com/embed/qP-OtB-D2gA" title="YouTube video player"
+        <iframe width="448" height="252" src="https://www.youtube.com/embed/qP-OtB-D2gA" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
-        <iframe width="336" height="189" src="https://www.youtube.com/embed/GQs4Cmb9RgM" title="YouTube video player"
+        <iframe width="448" height="252" src="https://www.youtube.com/embed/GQs4Cmb9RgM" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
