--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <header>
     <title>सिद्धगिरी सुमंगलम - पंचमहाभूत लोकोत्सव</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </Header>
 
 <body>
@@ -14,20 +15,20 @@
     <h3 style="color: #9c302d;">Panchmahabhoot Lokotsav Brochures</h3>
     <ul>
         <li>
-            <a
+            <a target="_blank"
                 href="http://siddhagirisumangalam.org/public/images/frontend/Panchamahabhot-Lokotsav-English-Brochure.pdf">Panchamahabhot
                 Lokotsav English Brochure</a>
         </li>
         <li>
-            <a
+            <a target="_blank"
                 href="http://siddhagirisumangalam.org/public/images/frontend/Panchamahabhoot-Lokotsav-Hindi-Brochure.pdf">पंचमहाभूत
                 लोकोत्सव हिंदी माहिती पत्रक </a>
         </li>
         <li>
-            <a href="">पंचमहाभूत लोकोत्सव मराठी माहिती पत्रक</a>
+            <a target="_blank" href="">पंचमहाभूत लोकोत्सव मराठी माहिती पत्रक</a>
         </li>
         <li>
-            <a
+            <a target="_blank"
                 href="http://siddhagirisumangalam.org/public/images/frontend/Panchamahabhoot-Lokotsav-Kannada-Brochure.pdf">ಪಂಚಮಹಾಭೂತ
                 ಲೋಕೋತ್ಸವ - ಕನ್ನಡ ಕರಪತ್ರ</a>
         </li>
