--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 लोकोत्सव हिंदी माहिती पत्रक </a>
         </li>
         <li>
-            <a target="_blank" href="">पंचमहाभूत लोकोत्सव मराठी माहिती पत्रक</a>
+            <a target="_blank" href="http://siddhagirisumangalam.org/public/images/frontend/Panchamahabhoot-Lokotsav-Marathi-Brochure.pdf">पंचमहाभूत लोकोत्सव मराठी माहिती पत्रक</a>
         </li>
         <li>
             <a target="_blank"
