--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         <img style="margin-bottom: 30px;" src="sumangal.png">
         <h1 style="color: #9c302d;">सुमंगलम - पंचमहाभूत लोकोत्सव</h1>
     </div>
-    <br />
-    <br />
     <h3 style="color: #9c302d;">Panchmahabhoot Lokotsav Website:</h3>
     <a target="_blank" href="http://siddhagirisumangalam.org/">http://siddhagirisumangalam.org/</a>
     <br />
+    <h3 style="color: #9c302d;">Panchmahabhoot Lokotsav Email Id:</h3>
+    sumangalam@siddhagirimatham.org
+    
     <br />
     <h3 style="color: #9c302d;">Panchmahabhoot Lokotsav Brochures</h3>
     <ul>
