--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h3 id="siteHead" style="">Panchmahabhoot Lokotsav Website:</h3>
     <a href="https://siddhagirisumangalam.org/" target="Blank">
         <div class="container">
-            <!-- <img src="images/SumangalamHomeSiteBanner.webp" alt="Avatar" class="image" style="width:100%"> -->
+            <!-- <img src="images/SumangalamHomeSiteBanner.jpg" alt="Avatar" class="image" style="width:100%"> -->
 
             <!-- <div class="middle">
                 <div class="text">siddhagirisumangalam.org</div>
@@ -36,7 +36,7 @@
     <h3 id="siteHead" style="">Siddhagiri Math Website:</h3>
     <a href="https://siddhagirimatham.org/" target="Blank">
         <div class="container">
-            <!-- <img src="images/SumangalamHomeSiteBanner.webp" alt="Avatar" class="image" style="width:100%"> -->
+            <!-- <img src="images/SumangalamHomeSiteBanner.jpg" alt="Avatar" class="image" style="width:100%"> -->
 
             <!-- <div class="middle">
                 <div class="text">siddhagirisumangalam.org</div>
